[package]
name = "garage_table"
version = "1.2.0"
authors = ["Alex Auvolat <alex@adnab.me>"]
edition = "2018"
license = "AGPL-3.0"
description = "Table sharding and replication engine (DynamoDB-like) for the Garage object store"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/garage"
readme = "../../README.md"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garage_db.workspace = true
garage_rpc.workspace = true
garage_util.workspace = true

opentelemetry.workspace = true

async-trait.workspace = true
arc-swap.workspace = true
hex.workspace = true
hexdump.workspace = true
tracing.workspace = true
rand.workspace = true

serde.workspace = true
serde_bytes.workspace = true

futures.workspace = true
futures-util.workspace = true
tokio.workspace = true
