[package]
name = "garage_util"
version = "1.2.0"
authors = ["Alex Auvolat <alex@adnab.me>"]
edition = "2018"
license = "AGPL-3.0"
description = "Utility crate for the Garage object store"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/garage"
readme = "../../README.md"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garage_db.workspace = true
garage_net.workspace = true

arc-swap.workspace = true
async-trait.workspace = true
blake2.workspace = true
bytesize.workspace = true
err-derive.workspace = true
hexdump.workspace = true
xxhash-rust.workspace = true
hex.workspace = true
lazy_static.workspace = true
tracing.workspace = true
rand.workspace = true
sha2.workspace = true

chrono.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

futures.workspace = true
tokio.workspace = true

http.workspace = true
hyper.workspace = true

opentelemetry.workspace = true

[build-dependencies]
rustc_version.workspace = true

[dev-dependencies]
mktemp.workspace = true

[features]
k2v = []
