[package]
name = "garage_web"
version = "0.8.4"
authors = ["Alex Auvolat <alex@adnab.me>", "Quentin Dufour <quentin@dufour.io>"]
edition = "2018"
license = "AGPL-3.0"
description = "S3-like website endpoint crate for the Garage object store"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/garage"
readme = "../../README.md"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garage_api.workspace = true
garage_model.workspace = true
garage_util.workspace = true
garage_table.workspace = true

err-derive = "0.3"
tracing = "0.1"
percent-encoding = "2.1.0"

futures = "0.3"

http = "0.2"
hyper = { version = "0.14", features = ["server", "http1", "runtime", "tcp", "stream"] }
hyperlocal = { version = "0.8.0", default-features = false, features = ["server"] }

tokio = { version = "1.0", default-features = false, features = ["net"] }

opentelemetry = "0.17"
