[package]
name = "garage_web"
version = "1.2.0"
authors = ["Alex Auvolat <alex@adnab.me>", "Quentin Dufour <quentin@dufour.io>"]
edition = "2018"
license = "AGPL-3.0"
description = "S3-like website endpoint crate for the Garage object store"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/garage"
readme = "../../README.md"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garage_api_common.workspace = true
garage_api_s3.workspace = true
garage_model.workspace = true
garage_util.workspace = true
garage_table.workspace = true

err-derive.workspace = true
tracing.workspace = true
percent-encoding.workspace = true

http.workspace = true
http-body-util.workspace = true
hyper.workspace = true

tokio.workspace = true

opentelemetry.workspace = true
