[package]
name = "garage_api_s3"
version = "1.2.0"
authors = ["Alex Auvolat <alex@adnab.me>"]
edition = "2018"
license = "AGPL-3.0"
description = "S3 API server crate for the Garage object store"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/garage"
readme = "../../../README.md"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garage_model.workspace = true
garage_table.workspace = true
garage_block.workspace = true
garage_net.workspace = true
garage_util.workspace = true
garage_rpc.workspace = true
garage_api_common.workspace = true

aes-gcm.workspace = true
async-compression.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
crc32fast.workspace = true
crc32c.workspace = true
err-derive.workspace = true
hex.workspace = true
tracing.workspace = true
md-5.workspace = true
pin-project.workspace = true
sha1.workspace = true
sha2.workspace = true

futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true

form_urlencoded.workspace = true
http.workspace = true
httpdate.workspace = true
http-range.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, default-features = false, features = ["server", "http1"] }
multer.workspace = true
percent-encoding.workspace = true
roxmltree.workspace = true
url.workspace = true

serde.workspace = true
serde_json.workspace = true
quick-xml.workspace = true

opentelemetry.workspace = true
